finalized just polishing

--- a/client/src/Components/Paginate/paginate.module.css
+++ b/client/src/Components/Paginate/paginate.module.css
@@ -1,3 +1,15 @@
-.pagnav{
+.pagnav {
     display: flex;
-}
+  }
+  
+  .button.active {
+    font-weight: 900;
+    border-color: black;
+    background-color: yellow;
+    color: black;
+  }
+  
+  .button:hover {
+    background-color: lightpink;
+  }
+  
