--- a/client/src/Views/Home/home.module.css
+++ b/client/src/Views/Home/home.module.css
@@ -9,8 +9,8 @@
   }
   
   h1 {
-    font-size: 32px;
-    color: #ff1f00;
+    
+    color: black;
     margin-bottom: 20px;
   }
   
@@ -74,9 +74,6 @@
     transition: transform 0.2s;
   }
   
-  .card:hover {
-    transform: scale(1.05);
-  }
   
   .card h2 {
     font-size: 24px;
