--- a/client/src/Components/NavBar/navbar.module.css
+++ b/client/src/Components/NavBar/navbar.module.css
@@ -12,7 +12,7 @@
     justify-content: space-around;
     width: 15rem;
     margin-left: auto;
-    margin-right: 28%;
+    margin-right: auto;
     font-size: 18px;
     color: #333;
   }
@@ -27,30 +27,4 @@
     color: #ff1f00;
   }
   
-  /* .searchbar {
-    margin-left: auto;
-  }
-  
-  .searchbar input {
-    font-size: 16px;
-    padding: 8px;
-    border: none;
-    border-radius: 4px;
-    background-color: #fff;
-    color: #333;
-  }
-  
-  .searchbar button {
-    font-size: 16px;
-    padding: 8px 12px;
-    border: none;
-    border-radius: 4px;
-    background-color: #ff1f00;
-    color: #fff;
-    cursor: pointer;
-  }
-  
-  .searchbar button:hover {
-    background-color: #ff3f1a;
-  }
-   */
+ 
