--- a/client/src/Components/Paginate/paginate.module.css
+++ b/client/src/Components/Paginate/paginate.module.css
@@ -5,7 +5,7 @@
   .button.active {
     font-weight: 900;
     border-color: black;
-    background-color: yellow;
+    background-color: lightcoral;
     color: black;
   }
   
