--- a/client/src/Views/Create/createform.module.css
+++ b/client/src/Views/Create/createform.module.css
@@ -2,88 +2,97 @@ html,
 body {
   height: 100%;
   margin: 0;
+  overflow: hidden;
 }
 
 body {
   display: flex;
   flex-direction: column;
   background-color: white;
-  background-image: url('https://wallpaperaccess.com/full/109332.jpg');
+  background-image: url('https://i.pinimg.com/originals/90/3c/e8/903ce82d065d12a760eeafe2aec9935a.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
-.formtitle{
-    font-size: x-large;
+
+.formtitle {
+  font-size: x-large;
 }
 
-.navcontainer {
-  background-color: yellow;
-  border: solid 1px black;
-  display: flex;
-  height: 3rem;
+.typechecks {
+  display: grid;
+  grid-template-columns: auto 1fr; 
+  grid-column-gap: 0.5rem; /*  (X-axis) */
+  grid-row-gap: 0.5rem; /*  (Y-axis) */
+  
+  
 }
 
-.linkcontainer {
-  display: flex;
-  justify-content: space-around;
-  width: 15rem;
-  align-items: center;
-  margin-left: auto;
-  margin-right: auto;
-  font-size: larger;
+/* Update .typechecks label class */
+.typechecks label {
+  display: flex; /* Use flexbox to align checkbox and label horizontally */
+  align-items: center; /* Center items vertically within the flex container */
+  padding: 3px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background-color: rgba(247, 247, 247, 0.5);
+}
+
+.typechecks label:hover {
+  background-color: #ddd;
 }
 
 .form {
-    width: 100%;
-    max-width: 400px;
-    margin: 50% auto;
-    transform: translateY(-50%);
-    background-color: rgba(247, 247, 247, 0.5);
-    border: 2px solid #e0e0e0;
-    border-radius: 8px;
-    padding: 20px;
-  }
-  
+  width: 100%;
+  max-width: 400px;
+  margin-top: 3%;
+  margin-left: 45%;
+  background-color: rgba(247, 247, 247, 0.5);
+  border: 2px solid #e0e0e0;
+  border-radius: 8px;
+  padding: 20px;
+}
+.forminput {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1rem; /*  gap between input fields */
+}
 
-  .forminput {
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
-  }
-  
-  .forminput label {
-    margin-right: 10px;
-    font-size: 18px;
-    color: black;
-  }
-  
-  .forminput input,
-  .forminput select {
-    width: 200px;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  .forminput p {
-    font-size: 14px;
-    color: red;
-    margin-left: 10px;
-  }
-  
-  .submitbutton input {
-    padding: 8px 16px;
-    background-color: #ff1f00;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    font-size: 16px;
-    cursor: pointer;
-  }
-  
-  .submitbutton input:disabled {
-    background-color: #ccc;
-    cursor: not-allowed;
-  }
-  
+.forminput label {
+  font-size: 18px;
+  color: black;
+  min-width: 70px; /* minimum width for the labels */
+}
+
+.forminput input.textInput {
+  flex: 0; /* 0 wont allow the input to grow and take up the remaining space making them all equal */
+  width: 200px; 
+  margin-left: 10px;
+  padding: 3px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box; 
+  font-size: 14px; /*size for the text input */
+}
+
+.forminput p {
+  font-size: 14px;
+  color: red;
+  margin-left: 10px;
+}
+
+.submitbutton input {
+  padding: 8px 16px;
+  background-color: #ff1f00;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+  margin: 5%;
+}
+
+.submitbutton input:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
